--- a/.github/workflows/youtube-workflow.yml
+++ b/.github/workflows/youtube-workflow.yml
@@ -1,8 +1,8 @@
 name: Latest YouTube Videos
 on:
   schedule:
-    # Runs every hour
-    - cron: '0 * * * *'
+    # Runs every month
+    - cron: '0 0 1 * *'
   workflow_dispatch:
 
 jobs:
